--- a/app/css/pages/impact.css
+++ b/app/css/pages/impact.css
@@ -19,9 +19,11 @@
     }
 }
 
-#impact-page {
+body.namespace-.controller-about.action-impact {
     background: var(--backgroundColorImpactPage);
+}
 
+#impact-page {
     header {
         width: 100%;
         left: 0px;
