--- a/app/views/community/show.html.haml
+++ b/app/views/community/show.html.haml
@@ -72,7 +72,7 @@
             See how you can help
             = graphical_icon "arrow-right", css_class: 'filter-textColor1'
 
-  .flex.mb-64{ class: "h-[600px] bg-[url(photos/swag-andre.jpg)] bg-cover bg-center" }
+  .andre-swag.flex.mb-64{ class: "h-[600px] bg-[url(photos/swag-andre.jpg)] bg-cover bg-center" }
     .m-auto.sm:mx-auto.mx-8.rounded-16.border-solid.border-t-6.border-b-6.border-primaryBtnBorder.pt-32.px-24.pb-48.grid.place-items-center.grow{ class: 'max-w-[640px] bg-[#130b43dd]' }
       .bg-gotToLoveAPurple.flex.text-white.py-6.px-16.items-center.rounded-100.shadow-dark_xsZ1.font-semibold.mb-32.leading-150
         = graphical_icon "moon", css_class: "filter-white h-[16px] w-[16px] mr-16"
