--- a/app/views/mentoring/external_requests/show_not_mentor.html.haml
+++ b/app/views/mentoring/external_requests/show_not_mentor.html.haml
@@ -2,7 +2,8 @@
   .lg-container.flex.flex-col.items-center.c-shapes.c-shapes-1
     = avatar(@solution.user)
     %h1.text-h1.mb-16 Want to mentor #{@solution.user.handle}?
-    %p.text-p-2xlarge.mb-32 You’ll need to register as a mentor first to get started.
+    %p.text-p-2xlarge.mb-32 You&apos;ll need to register as a mentor first to get started.
+    = render 'exercise_tag', solution: @solution
     .buttons.grid.grid-cols-2-auto.gap-20
       = ReactComponents::Mentoring::TryMentoringButton.new(text: "Register as mentor", size: "l", redirect_link: @solution.external_mentoring_request_url)
       = link_to "Learn more", mentoring_path, class: 'btn-enhanced btn-l'
