Remove redundant css class

--- a/app/views/mentoring/external_requests/_exercise_tag.html.haml
+++ b/app/views/mentoring/external_requests/_exercise_tag.html.haml
@@ -3,4 +3,4 @@
   .flex.flex-col.gap-8.mr-32
     .text-h4= solution.exercise.title
     .text-p-large.text-textColor6 in #{solution.track.title}
-  = graphical_icon "external-link", css_class: 'filter-textColor6 h-[22px] items-center'
+  = graphical_icon "external-link", css_class: 'filter-textColor6 h-[22px]'
