--- a/app/css/ui-kit/colors.css
+++ b/app/css/ui-kit/colors.css
@@ -733,7 +733,7 @@ html {
     /* negate the filter */
     /* img:not(#site-header .c-icon):not(.theme-preference-form-button
             .c-icon):not(#page-premium .feature .c-icon), */
-    img:not(.c-icon):not(.logo):not(.c-icon.graphic),
+    img:not(.c-icon):not(.logo):not(.c-icon.graphic):not(.c-icon.--hex img),
     /* .c-icon.graphic, */
     img[src^="/assets/graphics"],
     video,
