--- a/app/views/layouts/nav/tracks.html.haml
+++ b/app/views/layouts/nav/tracks.html.haml
@@ -6,7 +6,7 @@
       %div See all
       = graphical_icon "arrow-right"
 
-  .flex.flex-col
+  .nav-dropdown-track-list.flex.flex-col
     - user_tracks.map do |user_track|
       - track = user_track.track
 
