--- a/app/css/pages/settings.css
+++ b/app/css/pages/settings.css
@@ -18,7 +18,7 @@
             @apply mb-8;
         }
         & a {
-            @apply text-linkColor;
+            @apply text-prominentLinkColor;
         }
     }
     & article {
