Add Prolog to introduction videos

--- a/app/views/community/brief_introductions/index.html.haml
+++ b/app/views/community/brief_introductions/index.html.haml
@@ -13,7 +13,7 @@
 
       .flex-shrink-0{ class: "lg:w-[400px] w-100" }
         .c-youtube-container
-          %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/WQ-Lusoda_8", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
+          %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/dKn-BbS_zQQ", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
 
   %hr.border-borderColor6
 
