Break out comments form, clean up internal.tsx, fix types, etc

--- a/app/views/settings/user_preferences.html.haml
+++ b/app/views/settings/user_preferences.html.haml
@@ -9,4 +9,7 @@
         = render ReactComponents::Settings::UserPreferencesForm.new
 
       %section
+        = render ReactComponents::Settings::CommentsPreferenceForm.new
+
+      %section
         = render ReactComponents::Settings::ThemePreferenceForm.new
