Add toggle button

--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -42,6 +42,7 @@
 @import "./components/site-footer";
 @import "./components/site-header";
 @import "./components/nav-bar";
+@import "./components/toggle-button";
 @import "./components/theme-toggle-button";
 @import "./components/community-rank-tag";
 @import "./components/track-breadcrumbs";
