Update to Apps August

--- a/app/views/layouts/nav/challenge_12in23.html.haml
+++ b/app/views/layouts/nav/challenge_12in23.html.haml
@@ -4,8 +4,8 @@
   %p.text-p-base.font-semibold.mb-8
     Try out 12 different programming languages in 2023, curated and guided by us!
   %p.text-p-base.mb-16
-    This month is Jurassic July,
-    exploring some established and wildly successful languages: C, C++, COBOL, Fortran and Visual Basic.
+    This month is Apps August,
+    exploring languages used to write apps: ABAP, CoffeeScript, Dart, Delphi, Elm, Java, JavaScript, Kotlin, Objective-C, PHP, PureScript, ReasonML, Swift and TypeScript.
 
   = link_to "Explore #12in23", challenge_path("12in23"), class: 'btn-primary btn-s mb-12'
 
