--- a/app/css/components/textual-content.css
+++ b/app/css/components/textual-content.css
@@ -232,7 +232,7 @@
 
         & table {
             @apply my-16;
-            @apply shadow-base bg-backgroundColorA;
+            @apply bg-backgroundColorA;
             @apply rounded-5 overflow-hidden;
 
             & td,
