--- a/app/css/ui-kit/responsive-table-wrapper.css
+++ b/app/css/ui-kit/responsive-table-wrapper.css
@@ -1,4 +1,3 @@
 .c-responsive-table-wrapper {
-    /* shadow-base spread and compensation */
-    @apply overflow-x-auto max-w-[100%] p-24 -mx-24 -my-12;
+    @apply overflow-x-auto max-w-[100%] my-24 rounded-8 shadow-base;
 }
