--- a/app/css/ui-kit/responsive-table-wrapper.css
+++ b/app/css/ui-kit/responsive-table-wrapper.css
@@ -1,3 +1,3 @@
 .c-responsive-table-wrapper {
-    @apply overflow-x-auto max-w-[100%] my-24 rounded-8 shadow-base;
+    @apply overflow-x-auto max-w-[100%] w-fit bg-backgroundColorA my-24 rounded-8 shadow-base;
 }
