Update appy august page

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -90,7 +90,7 @@
           .text-adaptivePurple.font-semibold.leading-150.flex.items-center.mb-4
             %span.emoji.mr-6 📆
             Month 8 of #12in23
-          %h2.text-h3 It's Apps August
+          %h2.text-h3 It's Appy August
           %p.text-p-base.mb-6
             This month we're exploring languages that can be used to build apps: ABAP, CoffeeScript, Dart, Delphi, Elm, Java, JavaScript, Kotlin, Objective-C, PHP, PureScript, ReasonML, Swift and TypeScript!
             Have fun!
