--- a/app/views/challenges/12in23.html.haml
+++ b/app/views/challenges/12in23.html.haml
@@ -6,14 +6,14 @@
           .font-semibold.leading-150.flex.items-center.mb-4{ style: 'color: var(--colorPurpleToBrightPurple)' }
             %span.emoji.mr-6 📆
             Month 8 of #12in23
-          %h1.text-h1.mb-8 It's Apps August! ✨
+          %h1.text-h1.mb-8 It's Appy August! ✨
           %p.text-p-xlarge.mb-20
             This month for #12in23 we're exploring languages that can be used to build apps.
             We're digging into a whopping 14 languages: ABAP, CoffeeScript, Dart, Delphi, Elm, Java, JavaScript, Kotlin, Objective-C, PHP, PureScript, ReasonML, Swift and TypeScript, with interviews and live streaming, exclusive swag and lots of fun exercises for you to complete!
 
           .shadow-baseZ1.grid.grid-cols-2.gap-20.py-20.px-20.rounded-8.bg-backgroundColorB
             .flex-shrink
-              %h2.text-h4.mb-2 Start by watching our Apps August overview video  👉
+              %h2.text-h4.mb-2 Start by watching our Appy August overview video  👉
               %p.text-p-base.mb-8
                 Our introductory video gives a quick overview to the month, explores how these languages are different, looks at where they're useful, and finally gives a quick comparison between the featured languages this month.
               %p.text-p-base
@@ -26,7 +26,7 @@
 
           %h2.text-h3.mt-32.mb-2 Learn and Earn (the badge)!
           %p.text-p-large.mb-20
-            Earn the Apps August badge for completing and publishing 5 exercises in one of the following languages.
+            Earn the Appy August badge for completing and publishing 5 exercises in one of the following languages.
             Consider starting with a language with a syllabus (
             = graphical_icon "concepts", css_class: 'w-[14px] h-[14px] filter-purple inline mx-[-4px]'
             ).
@@ -78,10 +78,6 @@
           %h2.text-h3.mt-32.mb-4 Join the conversation… 💬
           %ul.text-p-large.list-disc.pl-16.c-highlight-links
             %li.mb-4
-              Help us compile the
-              = link_to "definitive list of great resources", "https://forum.exercism.org/t/the-definitive-guide-to-learning-jurassicy-languages/6306"
-              for learning and mastering these old skool languages in our dedicated forum thread.
-            %li.mb-4
               Join in the conversation by using the
               #{link_to '#12in23 tag on our forums', 'https://forum.exercism.org/tag/12in23'},
               chatting on our #{link_to 'Discord Server', 'https://exercism.org/r/discord'},
@@ -89,7 +85,7 @@
               %strong.font-semibold #12in23
               hashtag around social media!
             %li.mb-4
-              We have exclusive Apps August swag that will only be available later in the month. Keep an eye on the
+              We have exclusive Appy August swag that will only be available later in the month. Keep an eye on the
               = link_to "swag store", "https://swag.exercism.org"
               for details (and check out the Jurassic July swag before it goes too!)
 
