--- a/app/views/insiders/index.html.haml
+++ b/app/views/insiders/index.html.haml
@@ -37,6 +37,9 @@
         .c-youtube-container
           %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/GOPmj_AMbP8", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
 
+        .c-youtube-container
+          %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/nroPGD11hkw", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
+
   .gradient-container.py-64
     .lg-container
       %h2.text-h2.mb-32 Your Insider Benefits
