Update to Apps August (#5802)
* Update featured exercises

* Update to Apps August

* Update appy august page

* Add correct video

---------

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -89,10 +89,10 @@
         .flex.flex-col.items-start.mb-28
           .text-adaptivePurple.font-semibold.leading-150.flex.items-center.mb-4
             %span.emoji.mr-6 📆
-            Month 7 of #12in23
-          %h2.text-h3 It's Jurassic July
+            Month 8 of #12in23
+          %h2.text-h3 It's Appy August
           %p.text-p-base.mb-6
-            This month we're exploring established languages that have been incredibly successful: C, C++, COBOL, Fortran and Visual Basic!
+            This month we're exploring languages that can be used to build apps: ABAP, CoffeeScript, Dart, Delphi, Elm, Java, JavaScript, Kotlin, Objective-C, PHP, PureScript, ReasonML, Swift and TypeScript!
             Have fun!
           = link_to challenge_path('12in23'), class: "btn btn-primary btn-base" do
             %span Explore #12in23
