--- a/app/css/components/copy-text-to-clipboard.css
+++ b/app/css/components/copy-text-to-clipboard.css
@@ -3,12 +3,12 @@
 @keyframes copiedFadeOut {
     0% {
         opacity: 1;
-        top: 0px;
+        top: var(--message-top-position);
     }
 
     100% {
         opacity: 0;
-        top: -25px;
+        top: calc(var(--message-top-position) - 25px);
     }
 }
 
@@ -16,6 +16,7 @@
     min-height: 50px;
 }
 .c-copy-text-to-clipboard {
+    --message-top-position: 0px;
     @apply relative;
     @apply border-1 border-borderColor4 rounded-5;
     @apply py-12 px-20 bg-backgroundColorA text-left;
