Add copy button to Your iterations (#3612)
* Replace selection

* Remove unused code

* Add copy button to iteration header

* Change ordering of components on iteration status header

* Replace copy  button, fix animation position

* Show copy button - WIP

* Center button message, fix things

* Review more components

* Remove unused stuff

* Remove `loadforage` from package.json

* Revert "Remove `loadforage` from package.json"

This reverts commit f7cf22cc118a27f69ceb1cae1624536a39b80f9b.

* Fix positioning

* Fix apos in test

* Remove unused loc

--- a/app/css/components/iteration-pane.css
+++ b/app/css/components/iteration-pane.css
@@ -1,7 +1,22 @@
 .c-iteration-pane {
     @apply flex-grow flex flex-col;
     @apply bg-backgroundColorB;
-
+    .c-copy-text-to-clipboard {
+        --message-top-position: 25px;
+        position: static;
+        @apply border-none border-l-1 rounded-none;
+        @apply border-borderColor7 ml-32;
+        @apply bg-transparent;
+        @apply w-auto;
+        @apply py-0 px-8;
+        height: 36px;
+        & .c-icon {
+            @apply filter-textColor6;
+            @apply m-0;
+            height: 16px;
+            width: 16px;
+        }
+    }
     & .tabs {
         @apply flex items-center;
         @apply bg-backgroundColorB;
